# earthmover-colormaps

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml
docs/: colorblind-accessibility.md
earthmover_colormaps/: __init__.py  _data.py
earthmover_colormaps/_jscm/: em_bloom.jscm  em_cycle.jscm  em_diverging.jscm  em_earth.jscm  em_heat.jscm  em_lime.jscm  em_ocean.jscm  em_signal.jscm  em_twilight.jscm  em_violet.jscm
tests/: test_colormaps.py
tools/: colorspace_utils.py  compare_gui.py  design_new.py  generate_data.py  optimize_existing.py  visualize.py
